fixed some layout bugs

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -308,6 +308,7 @@ div#base-content {
 ///////////////
 
 div#post-content {
+  max-width: 1100px;
   padding: 15px 5em 15px 0;
   @extend %content-base;
   h1#post-title {
